--- a/JS/DOM/one.html
+++ b/JS/DOM/one.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="one.css">
+    <script src="one.js"></script>
 </head>
 <body>
     <div class="bg-block">
