--- a/JS/DOM/one.html
+++ b/JS/DOM/one.html
@@ -11,7 +11,14 @@
     <div class="bg-block">
         <h1 class="heading" id="title"> DOM learning in Chai Aur Code </h1>
         <p>Lorem ipsum dolor sit amet.</p>
-        
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+
+        <ul>
+            <li class="item">one</li>
+            <li class="item">two</li>
+            <li class="item">three</li>
+        </ul>
     </div>
 </body>
 </html>
