--- a/JS/TicTacToe/index.html
+++ b/JS/TicTacToe/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="msg-container hide" class="hide">
+        <p id="msg" >Winner</p>
+        <button class="new-btn">New game</button>
+    </div>
     <main>
         <h1>Tic Tac Toe</h1>
         <div class="container">
