--- a/JS/Object.html
+++ b/JS/Object.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h2>Objects And Classes</h2>
-    <script src="Objects.js"></script>
-    <script src="Class.js"></script>
+    <!-- <script src="Objects.js"></script>
+    <script src="Class.js"></script> -->
+    <script src="Call_Back_Async_Await.js"></script>
 </body>
 </html>
