done but error in js due to api url

--- a/JS/API Project/index.html
+++ b/JS/API Project/index.html
@@ -15,19 +15,14 @@
         <form action="">
             <div class="amount">
                 <p>Enter Amount</p>
-                <input type="text" value="">
+                <input type="text" value="1">
             </div>
             <div class="dropdown">
                 <div class="from">
                     <p>From</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png" alt="" srcset="">
-                        <select name="from" id="">
-                            <option value="USD">USD</option>
-                            <option value="INR">INR</option>
-                            <option value="EUR">EUR</option>
-                            <option value="AUD">AUD</option>
-                        </select>
+                        <select name="from" id=""></select>
                     </div>
                 </div>
                 <i class="fa-solid fa-right-left"></i>
@@ -35,12 +30,7 @@
                     <p>TO</p>
                     <div class="select-container">
                         <img src="https://flagsapi.com/IN/flat/64.png" alt="" srcset="">
-                        <select name="from" id="">
-                            <option value="USD">USD</option>
-                            <option value="INR" selected>INR</option>
-                            <option value="EUR">EUR</option>
-                            <option value="AUD">AUD</option>
-                        </select>
+                        <select name="to" id=""></select>
                     </div>
                 </div>
             </div>
